# rust-installer

./: .gitignore  Cargo.toml  LICENSE  README.md  run.bat  run.sh
payload/: README.txt
payload/config/: app.conf
src/: main.rs
